# ros2-delivery-drone

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/hand_detection/: CMakeLists.txt  package.xml
src/hand_detection/hand_detection/: hand_tracker_node.py
src/hand_detection/src/: video_capture_node.cpp  video_display_node.cpp
