<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_detection</name>
  <version>0.0.0</version>
  <description>ROS2 package for video capture, hand keypoint detection, and display using OpenCV</description>
  <maintainer email="79417323+westyvi@users.noreply.github.com">root</maintainer>
  <license>Apache-2.0</license>

  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>python3-cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>mediapipe</depend>
  <depend>python3</depend>
  <depend>ros2launch</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-sensor_msgs</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
